/lieder-media/ moved to /lieder/media-lieder/

--- a/templates/lieder-theme/base.html
+++ b/templates/lieder-theme/base.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>{% block title %}{% trans "Cor Lieder Càmera" %}{% endblock %}</title>
-    <link href="/lieder-media/css/base.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="/media-lieder/css/base.css" rel="stylesheet" type="text/css" media="screen" />
   </head>
 
 <body>
@@ -16,7 +16,7 @@
     </div>
 
     <div id="header">
-      <img src="/lieder-media/img/lieder.png" />
+      <img src="/media-lieder/img/lieder.png" />
     </div>
     
     <div id="content">
