Lists created as UL (before, tables).

--- a/templates/lieder-theme/articles/articles_detail.html
+++ b/templates/lieder-theme/articles/articles_detail.html
@@ -6,8 +6,10 @@
       
 <h1>{{ object.name }}</h1>
 
+{% if object.image %}
 <img src="{{ object.get_image_url }}" />
 <br>
+{% endif %}
 {{ object.body }}
 
 {% endblock %}
