--- a/templates/lieder-theme/articles/articles_list.html
+++ b/templates/lieder-theme/articles/articles_list.html
@@ -7,23 +7,18 @@
 <div id="articles">      
 <h1>{% trans "articles" %}</h1>
 
-<table>
-{% for prog in object_list %}
-      <tr>
-	<td>
-	      {% if prog.image %}
-	  <a href="{{ prog.slug }}">
-	    <img src={{ prog.get_image_url }}/>
-	  </a>
-	      {% endif %}
-	</td>
-	<td>
-	  <h2><a href="{{ prog.slug }}">{{ prog.name }}</a></h2>
-	  {{ prog.intro }}
-	</td>
-      </tr>
+<ul>
+{% for article in object_list %}
+    <li>
+    {% if article.image %}
+        <a href="{{ article.slug }}">
+        <img src={{ article.get_image_url }}/></a>
+    {% endif %}
+    <a href="{{ article.slug }}">{{ article.name }}</a>
+    </li>
+
 {% endfor %}
-</table>
+</ul>
 
 </div>	
 
