--- a/templates/lieder-theme/singers/singers_list.html
+++ b/templates/lieder-theme/singers/singers_list.html
@@ -8,34 +8,9 @@
       
 <h1>{% trans "the singers" %}</h1>
 
-	<table>
-	  <tr>
-	    <td>
-	      <img src="/media-lieder/img/singers01.jpg" />
-	      </td>
-		<td>
-		
-{% regroup object_list|dictsort:"voice" by voice as grouped %}
-<table class="singers-list">
-<tr>      
-{% for group in grouped %}
-    <td>{{ group.grouper|upper }}</td>
-{% endfor %}
-</tr>      
-<tr>      
-{% for group in grouped %}
-	<td>
-    <ul>
-    {% for singer in group.list|dictsort:"name" %}
-      <li>{{ singer.name }}</li>
-    {% endfor %}
-    </ul>
-	</td>
-{% endfor %}
-</tr>      
-</table>
-	    </td>
-	  </tr>
-	</table>
+	      <img src="/media-lieder/img/singers01.jpg" alt="{% trans "the singers" %}" />
+<div class="singers-list">
+    {% include "singers/singers_emm_table" %}
+</div>	    
 </div>
 {% endblock %}
