--- a/templates/lieder-theme/base.html
+++ b/templates/lieder-theme/base.html
@@ -2,14 +2,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>{% block title %}{% trans "Cor Lieder Càmera" %}{% endblock %}</title>
+    <title>{% block title %}{% trans "Cor Lieder Camera" %}{% endblock %}</title>
     <link href="/media-lieder/css/base.css" rel="stylesheet" type="text/css" media="screen" />
   </head>
 
+
 <body>
-    <div id="menu-lang">
-        {% include "lang-chooser" %}
-    </div>
 
     <div id="menu-top">
         {% include "menus/get-menu" %}
@@ -23,5 +21,9 @@
       {% block content %}{% endblock %}
     </div>
     
+    <div id="menu-lang">
+        {% include "lang-chooser" %}
+    </div>
+
 </body>
 </html>
