--- a/templates/lieder-theme/concerts/concerts_detail.html
+++ b/templates/lieder-theme/concerts/concerts_detail.html
@@ -6,17 +6,52 @@
       
 <h1>{{ object.name }}</h1>
 
-<table border=1>
-      <tr>
-	<td>{% trans "first part" %}</td>
-	<td>{% trans "second part" %}</td>
-      </tr>      
-      <tr>
-	<td>{{ object.first_part }}</td>
-	<td>{{ object.second_part }}</td>
-	<td></td>
-      </tr>      
-</table>
+    {% if object.city %}
+        <li>
+	{% trans "City: " %}<strong>{{ object.city }}</strong>
+        </li>
+    {% endif %}
+    {% if object.auditorium %}
+    <li>
+      {% trans "Auditorium: " %}<strong>{{ object.auditorium }}</strong></li>
+    {% endif %}
+    {% if object.address %}
+    <li>
+      {% trans "Address:" %}<strong>{{ object.address }}</strong>
+    </li>
+    {% endif %}
+    {% if object.cycle %}
+    <li>
+      {% trans "Cycle:" %}<strong>{{ object.cycle }}</strong>
+    </li>
+    {% endif %}
+    {% if object.programme %}
+    <li>
+      {% trans "Programme:" %}<strong>{{ object.programme }}</strong>
+    </li>
+    {% endif %}
+    {% if object.tickets %}
+    <li>
+      {% trans "Tickets:" %}<strong>{{ object.tickets }}</strong>
+    </li>
+    {% endif %}
+    {% if object.price %}
+    <li>
+      {% trans "Price:" %}<strong>{{ object.price }}</strong>
+    </li>
+    {% endif %}
+    {% if object.organization %}
+    <li>
+      {% trans "Organization:" %}<strong>{{ object.organization }}</strong>
+    </li>
+    {% endif %}
+    {% if object.others_markdown %}
+    <li>
+      {% trans "Others:" %}{{ object.others }}
+    </li>
+    {% endif %}
+    <hr>
+
 {{ object.footer }}
 
 {% endblock %}
