* Minor templates changes. * All templates show titles in lowercase. * articles.sections model modified: added slug attribute. * concerts.concerts model modified: added start_date attribute. * Corrected bug on menuitem._pre_save(). Now saves changes. * Admin has ReST quick-help. * apps.concerts.urls only takes future events. * article.section attribute is required on admin. * URLs map only using slug (cleaner). * articles.urls: render specific templates to specific sections and   articles in section. * 'slug' shown as 'permalink' in admin.

--- a/templates/lieder-theme/articles/els-components-del-cor_detail.html
+++ b/templates/lieder-theme/articles/els-components-del-cor_detail.html
@@ -12,4 +12,8 @@
 {% endif %}
 {{ object.body }}
 
+<div class="singers-list">
+    {% include "singers/singers_emm_table" %}
+</div>
+
 {% endblock %}
