--- a/templates/lieder-theme/documents/documentcategorys_list.html
+++ b/templates/lieder-theme/documents/documentcategorys_list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
       
-<h1>{% trans "documents" %}</h1>
+<h1>{% filter lower %}{% trans "Documents" %}{% endfilter %}</h1>
 
 <ul>
 {% for categ in object_list %}
