--- a/media-lieder/css/base.css
+++ b/media-lieder/css/base.css
@@ -1,100 +1,1 @@
-/* base.css */
-
-h1 {
-  border-bottom: thin solid ;
-  font-size: 1em;
-}
-h1,h2,h3 {
-  color:#ea7000;
-}
-a img {
-  border: none;
-}
-a {
-  color: black ;
-  font-weight: bold;
-}
-a:hover {
-  color: #ea7000;
-}
-li {
-  list-style-type: none;
-}
-table {
-  vertical-align: top;
-}
-table, td {
-  border-width: 0px ;
-}
-
-/*------------------------------------------------------------*/
-
-#programmes table {
-  background-color: #ea7000;
-  padding: 20px ;
-}
-#programmes td {
-  border: 1px solid white ;
-  padding: 0px ;
-  width: 40% ;
-}
-
-/*------------------------------------------------------------*/
-
-table.singers-list {
-  border-top: thin solid #ea7000;
-  border-bottom: thin solid #ea7000;
-}
-
-
-/*------------------------------------------------------------*/
-
-#menu-top {
-  clear: both;
-  position: absolute ;
-  margin-left: 200px ;
-  margin-top: 20px ;
-}
-#menu-top li {
-  display:block;
-  float:left;
-  list-style-type:none;
-}
-#menu-top a {
-  display:block;
-  float:left;
-  padding: .5em 1em .5em 1em ;
-  font-size: 1em ;
-  color:#ea7000;
-  background-color: white;
-}
-#menu-top a:hover {
-  color:white;
-  background-color: #ea7000;
-}
-
-/*------------------------------------------------------------*/
-
-#menu-lang {
-  clear: both;
-  align: center;
-  position: absolute ;
-  margin-left: 600px ;
-}
-#menu-lang li {
-  display:block;
-  float:left;
-  list-style-type:none;
-}
-#menu-lang a {
-  display:block;
-  float:left;
-  padding: .5em 1em .5em 1em ;
-  font-size: .8em ;
-  color:#ea7000;
-  background-color: white;
-}
-#menu-lang a:hover {
-  color:white;
-  background-color: #ea7000;
-}
+/***********************************************//* 2col_rightNav.css                             *//* Use with template 2col_rightNav.html          *//***********************************************//***********************************************//* HTML tag styles                             *//***********************************************/ body{	font-family: verdana;	font-size: 13px;	width: 850px;	padding-top: 0px;	margin: 0px;	left: auto;	right: auto;	clip:    rect(auto auto auto auto);}a:link, a:visited, a:hover {	color: E06F14;	text-decoration: none;}a:hover {	text-decoration: none;}/* overrides decoration from previous rule for hovered links */h1, h2, h3, h4, h5, h6 {	font-family: verdana;	margin: 0px;	padding: 0px;	text-decoration: none;}h1{	font-family: Verdana, Arial, sans-serif;	font-size: 12px;	color: #000000;	font-weight: bold;}h2{	font-size: 90%;	color: #000000;	font-style: normal;}h3{	font-size: 100%;	color: #000000;}h4{ font-size: 100%; font-weight: normal; color: #000000;}h5{ font-size: 100%; color: #000000;}ul{ list-style-type: square;}ul ul{ list-style-type: disc;}ul ul ul{ list-style-type: none;}/***********************************************//* Layout Divs                                 *//***********************************************/#masthead{	margin: 0;	width: 850px;	padding-right: 0px;	padding-left: 0px;	padding-top: 5px;	padding-bottom: 0px;	text-align: center;}#navBar{	text-decoration: none;	text-align: left;}#content{	float:left;	width: 512px;	margin: 0;	position: static;	padding-top: 4;}/***********************************************//*Component Divs                               *//***********************************************/#siteName{	margin: 0px;	width: 850px;	padding-top: 0px;	padding-right: 2px;	padding-left: 0px;	padding-bottom: 3px;}/*************** #pageName styles **************/#pageName{	padding: 3px 0px 10px 10px;	font-size: 90%;	font-weight: normal;}/************* #globalNav styles **************/#globalNav{	white-space: nowrap;	text-align: right;	background-color: #00246a;	width: 850px;	line-height: 1px;}/* 'nowrap' prevents links from line-wrapping if there are too many to fit in one line   this will force a horizontal scrollbar if there isn't enough room for all links   remove rule or change value to 'normal' if you want the links to line-wrap */#globalNav img{}#globalNav a {	font-size: 80%;	padding: 0px 4px 0px 0px;	color: #ffffff;}/************** .feature styles ***************/.feature{	padding: 0px 0px 10px 10px;	font-size: 80%;}.feature h3{	padding: 30px 0px 5px 0px;	text-align: center;}.feature img{	float: left;	padding: 0px 10px 0px 0px;	margin: 0 5px 5px 0;}/* adjust margins to change separation between the feature image and text flowing around it *//************** .story styles *****************/.story{	clear: both;	padding: 10px 0px 0px 10px;	font-size: 80%;}.story p{  padding: 0px 0px 10px 0px;}/************* #siteInfo styles ***************/#siteInfo{	clear: both;	border: 1px solid #cccccc;	font-size: 75%;	padding: 10px;	margin-top: -1px;}/* negative top margin pulls siteinfo up so its top border overlaps (and thus lines up with)   the bottom border of the navBar in cases where they "touch" */#siteInfo img{	padding: 4px 4px 4px 0px;	vertical-align: middle;}/*********** #navBar link styles ***********/#navBar ul a:link, #navBar ul a:visited {display: block;}#navBar ul {margin: 0; padding: 0;}/* hack to fix IE/Win's broken rendering of block-level anchors in lists */#navBar li {	list-style-type: none;}/* fix for browsers that don't need the hack */html>body #navBar li {}/*********** #sectionLinks styles ***********/#sectionLinks{	font-size: 90%;	padding-top: 3px;	padding-bottom: 2px;}#sectionLinks h3{	padding-right: 0px;	padding-bottom: 2px;	padding-top: 2px;	padding-left: 10px;}#sectionLinks a:link{	voice-family: "\"}\"";	voice-family:inherit;	padding-right: 0px;	padding-top: 2px;	padding-bottom: 2px;	padding-left: 10px;}#sectionLinks a:visited{	text-decoration: none;	padding-right: 0px;	padding-top: 2px;	padding-bottom: 2px;	padding-left: 10px;}#sectionLinks a:hover{	color: E06F14;	padding-right: 0px;	padding-top: 2px;	padding-bottom: 2px;	padding-left: 10px;}/************** #advert styles **************/#advert{	padding: 10px 0px 0px 10px;	font-size: 80%;}#advert img{	display: block;}/************** #headlines styles **************/#headlines{	margin: 0px;	padding: 10px 0px 20px 10px;	font-size: 80%;}#headlines p{	padding: 5px 0px 5px 0px;}.filet {	border-top: 1px;	border-bottom: 1px solid #cccccc;}
