--- a/templates/lieder-theme/base.html
+++ b/templates/lieder-theme/base.html
@@ -1,29 +1,1 @@
-{% load i18n menutags %}
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-  <head>
-    <title>{% block title %}{% trans "Cor Lieder Camera" %}{% endblock %}</title>
-    <link href="/media-lieder/css/base.css" rel="stylesheet" type="text/css" media="screen" />
-  </head>
-
-
-<body>
-
-    <div id="menu-top">
-        {% include "menus/get-menu" %}
-    </div>
-
-    <div id="header">
-      <img src="/media-lieder/img/lieder.png" />
-    </div>
-    
-    <div id="content">
-      {% block content %}{% endblock %}
-    </div>
-    
-    <div id="menu-lang">
-        {% include "lang-chooser" %}
-    </div>
-
-</body>
-</html>
+{% load i18n menutags %}<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><!-- DW6 --><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><title>concerts</title><!-- The structure of this file is exactly the same as 2col_leftNav.html;     the only difference between the two is the stylesheet they use --><style type="text/css"><!----></style><link href="/media-lieder/css/base.css" rel="stylesheet" type="text/css" /><style type="text/css"><!--.Estilo3 {color: #000000}--></style></head><body><div id="masthead">   <h1 id="siteName" align="right"><img src="/media-lieder/img/logoAB.png" height="85" width="512"></h1>    <div id="globalNav">              {% include "menus/get-menu-horit" %} </div></div><!-- end masthead --><div id="content">      {% block content %}{% endblock %}  </div> </div> <!--end content --> <div id="navBar">     <div id="sectionLinks">        {% include "menus/get-menu-vert" %}  </div></div>    <div id="siteInfo"><img src="" height="22" width="44"><a href="#">About Us</a> | <a href="#">Site  Map</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact Us</a> | 2003  Company Name </div> <br></body></html>
