--- a/templates/lieder-theme/articles/articles_detail.html
+++ b/templates/lieder-theme/articles/articles_detail.html
@@ -4,7 +4,8 @@
 
 {% block content %}
       
-<h1>{{ object.name|lower }}</h1>
+<h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
+{{ object.name|lower }}</h1>
 
 {% if object.image %}
 <img src="{{ object.get_image_url }}" />
