--- a/templates/lieder-theme/articles/articles_list.html
+++ b/templates/lieder-theme/articles/articles_list.html
@@ -5,7 +5,8 @@
 {% block content %}
 
 <div id="articles">      
-<h1>{% trans "articles" %}</h1>
+<h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
+{% filter lower %}{% trans "articles" %}{% endfilter %}</h1>
 
 <ul>
 {% for article in object_list %}
