--- a/templates/lieder-theme/articles/premsa.html
+++ b/templates/lieder-theme/articles/premsa.html
@@ -4,17 +4,19 @@
 
 {% block content %}
 
-<div id="articles-direccio"> 
+<div id="articles-premsa">      
 <h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
 {{ object.secname|lower }}</h1>
 
-
 {% for article in object.get_article_list %}
-    <h2>{{ article.name }}</h2>
     {% if article.image %}
-        <img src={{ article.get_image_url }} alt="{{ article.name }}" height=80 width=80 />
+        <a href="{{ article.get_image_url }}">
+        <img src={{ article.get_image_url }} alt="{{ article.name }}" height=80 width=80 /></a>
     {% endif %}
-    {{ article.body }}
+    <h2><a href="{{ article.get_image_url }}">{{ article.name }}</a></h2>
+    {% if article.intro %}
+        {{ article.intro }}
+    {% endif %}
 {% endfor %}
 
 </div>	
