--- a/templates/lieder-theme/articles/sections_detail.html
+++ b/templates/lieder-theme/articles/sections_detail.html
@@ -3,9 +3,9 @@
 
 
 {% block content %}
-      
-<h1>{{ object.secname|lower }}</h1>
 
+<h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
+{{ object.secname|lower }}</h1>
 <ul>
 {% for article in object.get_article_list %}
     <li>
