--- a/templates/lieder-theme/articles/sections_list.html
+++ b/templates/lieder-theme/articles/sections_list.html
@@ -4,8 +4,8 @@
 {% block content %}
 
 <div class="articles-sections">      
-<h1>{% filter lower %}{% trans "sections" %}{% endfilter %}</h1>
-
+<h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
+{% filter lower %}{% trans "sections" %}{% endfilter %}</h1>
 <ul>
 {% for section in object_list %}
     <li>
