Building lieder-theme.

--- a/templates/lieder-theme/articles/enregistraments_list.html
+++ b/templates/lieder-theme/articles/enregistraments_list.html
@@ -4,14 +4,15 @@
 
 {% block content %}
 
-<div id="articles-enregistraments">      
 <h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
 {{ object.secname|lower }}</h1>
 
+<div id="contentsub">      
 {% for article in object.get_article_list %}
     {% if article.image %}
         <a href="{{ article.get_absolute_url }}">
-        <img src={{ article.get_image_url }} alt="{{ article.name }}" height=80 width=80 /></a>
+        <img class="enregistraments" src={{ article.get_image_url }} alt="{{ article.name }}" height=80 width=80 />
+        </a>
     {% endif %}
     <h2><a href="{{ article.get_absolute_url }}">{{ article.name }}</a></h2>
     {% if article.intro %}
