--- a/templates/lieder-theme/articles/articles_detail.html
+++ b/templates/lieder-theme/articles/articles_detail.html
@@ -4,13 +4,16 @@
 
 {% block content %}
       
-<h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
+<h1 id="pageName">
+<img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
 {{ object.name|lower }}</h1>
 
+<div id="contentsub">
 {% if object.image %}
 <img src="{{ object.get_image_url }}" />
 <br>
 {% endif %}
 {{ object.body }}
 
+</div>
 {% endblock %}
