--- a/templates/lieder-theme/articles/articles_list.html
+++ b/templates/lieder-theme/articles/articles_list.html
@@ -4,10 +4,10 @@
 
 {% block content %}
 
-<div id="articles">      
 <h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
 {% filter lower %}{% trans "articles" %}{% endfilter %}</h1>
 
+<div id="contentsub">      
 <ul>
 {% for article in object_list %}
     <li>
