--- a/templates/lieder-theme/articles/els-components-del-cor_detail.html
+++ b/templates/lieder-theme/articles/els-components-del-cor_detail.html
@@ -4,8 +4,10 @@
 
 {% block content %}
       
-<h1>{{ object.name|lower }}</h1>
+<h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
+{{ object.name|lower }}</h1>
 
+<div id="contentsub">
 {% if object.image %}
 <img src="{{ object.get_image_url }}" />
 <br>
@@ -16,4 +18,5 @@
     {% include "singers/singers_emm_table" %}
 </div>
 
+</div>
 {% endblock %}
