--- a/templates/lieder-theme/articles/la-direccio.html
+++ b/templates/lieder-theme/articles/la-direccio.html
@@ -4,11 +4,10 @@
 
 {% block content %}
 
-<div id="articles-direccio"> 
 <h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
 {{ object.secname|lower }}</h1>
 
-
+<div id="contentsub"> 
 {% for article in object.get_article_list %}
     <h2>{{ article.name }}</h2>
     {% if article.image %}
