--- a/templates/lieder-theme/articles/sections_detail.html
+++ b/templates/lieder-theme/articles/sections_detail.html
@@ -6,6 +6,8 @@
 
 <h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
 {{ object.secname|lower }}</h1>
+
+<div id="contentsub">
 <ul>
 {% for article in object.get_article_list %}
     <li>
@@ -18,5 +20,5 @@
 
 {% endfor %}
 </ul>
-
+</div>
 {% endblock %}
