--- a/templates/lieder-theme/documents/documentcategorys_detail.html
+++ b/templates/lieder-theme/documents/documentcategorys_detail.html
@@ -2,16 +2,18 @@
 {% extends "base" %}
 
                 {% block content %}
-<h1>{% filter lower %}{% trans "Documents" %}: {{ object.catname }}{% endfilter %}</h1>
+<h1 id="pageName">
+<img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
+{% filter lower %}{% trans "Documents" %}: {{ object.catname }}{% endfilter %}</h1>   
 
-<ul>
+<div id="contentsub">
+
 {% for docu in object.get_document_list %}
-	<li>
-	<a href="{{ docu.get_file_url }}">{{ docu.name }}</a>
+	<h2><a href="{{ docu.get_file_url }}">{{ docu.name }}</a></h2>
 	{% if docu.description %}
-	<p>{{ docu.description }}</p>
+            {{ docu.description }}
 	{% endif %}
-	</li>
+        <p class="filet">&nbsp;</p>
 {% endfor %}
-</ul>
+</div>
                 {% endblock %}
