--- a/templates/lieder-theme/links/linkcategorys_detail.html
+++ b/templates/lieder-theme/links/linkcategorys_detail.html
@@ -4,18 +4,18 @@
 
 {% block content %}
       
-<h1>{% filter lower %}{% trans "Links" %}: {{ object.catname }}{% endfilter %}</h1>
+<h1 id="pageName">
+<img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
+{% filter lower %}{% trans "Links" %}: {{ object.catname }}{% endfilter %}</h1>   
 
-<ul>
+<div id="contentsub">
 {% for link in object.get_link_list %}
-	<li>
-	<a href="{{ link.url }}">{{ link.name }}</a>
+	<h2><a href="{{ link.url }}">{{ link.name }}</a></h2>
 	{% if link.description %}
-            <br>
-            {{ link.description }}
+            <p>{{ link.description }}</p>
 	{% endif %}
-	</li>
+        <p class="filet">&nbsp;</p>
 {% endfor %}
-</ul>
+</div>
 
 {% endblock %}
