--- a/templates/lieder-theme/links/linkcategorys_list.html
+++ b/templates/lieder-theme/links/linkcategorys_list.html
@@ -4,18 +4,17 @@
 
 {% block content %}
       
-<h1>{% filter lower %}{% trans "Links" %}{% endfilter %}</h1>
+<h1 id="pageName">
+<img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
+{% filter lower %}{% trans "Links" %}{% endfilter %}</h1>   
 
-<ul>
+<div id="contentsub">
 {% for categ in object_list %}
-	<li>
-	<a href="{{ categ.get_absolute_url }}">{{ categ.catname }}</a>
+	<h2><a href="{{ categ.get_absolute_url }}">{{ categ.catname }}</a></h2>
         {% if categ.catdescription %}
-            <br>
-            {{ categ.catdescription }}
+            <p>{{ categ.catdescription }}</p>
 	{% endif %}
-	</li>
 {% endfor %}
-</ul>
+</div>
 
 {% endblock %}
