--- a/templates/lieder-theme/lang-chooser-ul.html
+++ b/templates/lieder-theme/lang-chooser-ul.html
@@ -1,5 +1,7 @@
+<div id="siteInfo">
 <ul>
 {% for lang in LANGUAGES %}
     <li><a href="/i18n/setlang/?language={{ lang.0 }}">{{ lang.0 }}</a><li>
 {% endfor %}
 <ul>
+</div>
