--- a/templates/lieder-theme/links/linkcategorys_list.html
+++ b/templates/lieder-theme/links/linkcategorys_list.html
@@ -5,7 +5,7 @@
 {% block content %}
       
 <h1 id="pageName">
-<img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
+<img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="15" height="9" alt="quadrattronja">
 {% filter lower %}{% trans "Links" %}{% endfilter %}</h1>   
 
 <div id="contentsub">
