--- a/templates/lieder-theme/menus/get-menu-vert.html
+++ b/templates/lieder-theme/menus/get-menu-vert.html
@@ -2,9 +2,14 @@
 
 {% get_menu "vertical" as menu_items %}
 
+<div id="navBar">   
+  <div id="sectionLinks">
+  
 <ul>
 {% for item in menu_items %}
-    <li><a href="{{ item.0 }}"><img src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" />{{ item.1 }}</a></li>
+    <li><a href="{{ item.0 }}"><img src="/media-lieder/img/quadrattronja.png" width="15" height="9" />{{ item.1 }}</a></li>
 {% endfor %}
 </ul>
 
+  </div>
+</div>   
