--- a/templates/lieder-theme/articles/premsa.html
+++ b/templates/lieder-theme/articles/premsa.html
@@ -4,14 +4,14 @@
 
 {% block content %}
 
-<h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
+<h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="15" height="9" alt="quadrattronja">
 {{ object.secname|lower }}</h1>
 
 <div id="contentsub">
 {% for article in object.get_article_list %}
     
     <h2><a href="{{ article.get_image_url }}">
-    <img class="premsa" src="/media-lieder/img/pictopremsa.png" alt="" width="21" height="21" border="0" align="absbottom" />
+    <img class="premsa" src="/media-lieder/img/pictopremsa.png" alt="pictopremsa" width="21" height="21" />
     {{ article.name }}</a></h2>
     {% if article.intro %}
         {{ article.intro }}
