--- a/templates/lieder-theme/articles/sections_list.html
+++ b/templates/lieder-theme/articles/sections_list.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
+<h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="15" height="9" alt="quadrattronja">
 {% filter lower %}{% trans "sections" %}{% endfilter %}</h1>
 
 <div class="contentsub">      
