--- a/templates/lieder-theme/concerts/concerts_list.html
+++ b/templates/lieder-theme/concerts/concerts_list.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <h1 id="pageName">
-<img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
+<img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="15" height="9" alt="quadrattronja">
 {% filter lower %}{% trans "Concerts" %}{% endfilter %}</h1>   
 <div id="contentsub">
 
