--- a/templates/lieder-theme/documents/documentcategorys_detail.html
+++ b/templates/lieder-theme/documents/documentcategorys_detail.html
@@ -3,13 +3,15 @@
 
                 {% block content %}
 <h1 id="pageName">
-<img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="20" height="12" border="0" alt="">
+<img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="15" height="9" alt="quadrattronja">
 {% filter lower %}{% trans "Documents" %}: {{ object.catname }}{% endfilter %}</h1>   
 
 <div id="contentsub">
 
 {% for docu in object.get_document_list %}
-	<h2><a href="{{ docu.get_file_url }}">{{ docu.name }}</a></h2>
+	<h2><a href="{{ docu.get_file_url }}">
+        <img class="documents" src="/media-lieder/img/pictopremsa.png" alt="pictopremsa" width="21" height="21" />
+        {{ docu.name }}</a></h2>
 	{% if docu.description %}
             {{ docu.description }}
 	{% endif %}
