--- a/templates/lieder-theme/lang-chooser-p.html
+++ b/templates/lieder-theme/lang-chooser-p.html
@@ -1,5 +1,6 @@
-
+<div id="siteInfo">
 {% for lang in LANGUAGES %}
     <a href="/i18n/setlang/?language={{ lang.0 }}">{{ lang.0 }}</a>
     {% if not forloop.last %} | {% endif %}
 {% endfor %}
+</div>
