--- a/templates/lieder-theme/articles/enregistraments_detail.html
+++ b/templates/lieder-theme/articles/enregistraments_detail.html
@@ -11,7 +11,7 @@
 <div id="contentsub">
 
     {% if object.image %}
-    <img src="{{ object.get_image_url }}" alt="{{ article.name }}" height="{{ article.get_image_heigth }}"
+    <img src="{{ object.get_image_url }}" alt="{{ article.name }}" height="{{ article.get_image_height }}"
     width="{{ article.get_image_width }}"/>
     <br>
     {% endif %}
