--- a/templates/lieder-theme/articles/els-components-del-cor_detail.html
+++ b/templates/lieder-theme/articles/els-components-del-cor_detail.html
@@ -4,12 +4,13 @@
 
 {% block content %}
       
-<h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="15" height="9" alt="">
+<h1 id="pageName"><img name="quadrattronja" src="/media-lieder/img/quadrattronja.png" width="15" height="9" alt="quadrattronja">
 {{ object.name|lower }}</h1>
 
 <div id="contentsub">
     {% if object.image %}
-    <img src="{{ object.get_image_url }}" />
+    <img src="{{ object.get_image_url }} alt="{{ object.name }}" height="{{ object.get_image_height }}"
+    width="{{ object.get_image_width }}"" />
     <br>
     {% endif %}
 
