--- a/templates/lieder-theme/articles/premsa.html
+++ b/templates/lieder-theme/articles/premsa.html
@@ -10,7 +10,7 @@
 <div id="contentsub">
 {% for article in object.get_article_list %}
     
-    <h2><a href="{{ article.get_image_url }}">
+    <h2><a href="{{ article.get_image_url }}" onclick="window.open(this.href,'newwin', 'width=450,height=450'); return false;">
     <img class="premsa" src="/media-lieder/img/pictopremsa.png" alt="pictopremsa" width="21" height="21" />
     {{ article.name }}</a></h2>
     {% if article.intro %}
