--- a/templates/lieder-theme/articles/articles_detail.html
+++ b/templates/lieder-theme/articles/articles_detail.html
@@ -10,8 +10,8 @@
 
 <div id="contentsub">
 {% if object.image %}
-    <img src="{{ object.get_image_url }}" alt="{{ article.name }}" height="{{ article.get_image_height }}"
-    width="{{ article.get_image_width }}" />
+    <img src="{{ object.get_image_url }}" alt="{{ object.name }}" height="{{ object.get_image_height }}"
+    width="{{ object.get_image_width }}" />
 <br>
 {% endif %}
 {{ object.body }}
