--- a/templates/lieder-theme/documents/documentcategorys_detail.html
+++ b/templates/lieder-theme/documents/documentcategorys_detail.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% extends "base" %}
+{% extends "base.html" %}
 
                 {% block content %}
 {% for docu in object.get_document_list %}
